--- a/quote/nature.htm
+++ b/quote/nature.htm
@@ -6,7 +6,7 @@ Nature Quote Generator
 <link href="https://fonts.googleapis.com/css?family=Alegreya+SC" rel="stylesheet">
 
 </head>
-<body style="background-image: url('http://www.qygjxz.com/data/out/9/6156164-animal-wallpaper.jpg');color:White;">
+<body style="background-image: url('http://www.qygjxz.com/data/out/9/6156164-animal-wallpaper.jpg');color:White;font-family: 'Alegreya SC', serif;">
 <center>
 <h2>"This is and example quote"</h2>
 <h4>- Some famous guy</h4>
