--- a/quote/nature.htm
+++ b/quote/nature.htm
@@ -6,9 +6,9 @@ Nature Quote Generator
 <link href="https://fonts.googleapis.com/css?family=Alegreya+SC" rel="stylesheet">
 
 </head>
-<body style="background-image: url('http://www.qygjxz.com/data/out/9/6156164-animal-wallpaper.jpg');color:White;font-family: 'Alegreya SC', serif;">
+<body background="http://www.qygjxz.com/data/out/9/6156164-animal-wallpaper.jpg" style="color:White;font-family: 'Alegreya SC', serif;">
 <center>
-<h2>"This is and example quote"</h2>
+<h2>"This is an example quote"</h2>
 <h4>- Some famous guy</h4>
 </center>
 </body>
