--- a/quote/nature.htm
+++ b/quote/nature.htm
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>
@@ -6,7 +7,7 @@ Nature Quote Generator
 <link href="https://fonts.googleapis.com/css?family=Alegreya+SC" rel="stylesheet">
 
 </head>
-<body background="6156164-animal-wallpaper.jpg" style="color:White;font-family: 'Alegreya SC', serif;">
+<body style="background-image:url(6156164-animal-wallpaper.jpg)color:White;font-family: 'Alegreya SC', serif;">
 <center>
 <h2>"This is an example quote"</h2>
 <h4>- Some famous guy</h4>
