--- a/quote/nature.htm
+++ b/quote/nature.htm
@@ -7,7 +7,7 @@ Nature Quote Generator
 <link href="https://fonts.googleapis.com/css?family=Alegreya+SC" rel="stylesheet">
 
 </head>
-<body style="background-image:url(6156164-animal-wallpaper.jpg)color:White;font-family: 'Alegreya SC', serif;">
+<body style="background-image:url("6156164-animal-wallpaper.jpg")color:White;font-family: 'Alegreya SC', serif;">
 <center>
 <h2>"This is an example quote"</h2>
 <h4>- Some famous guy</h4>
