--- a/quote/nature.htm
+++ b/quote/nature.htm
@@ -9,8 +9,8 @@ Nature Quote Generator
 </head>
 <body style="background-size: cover;background-repeat: no-repeat;background-image:url('6156164-animal-wallpaper.jpg')">
 <center style="color:White;font-family: 'Alegreya SC', serif;">
-<h1>"This is an example quote"</h1>
-<h2>- Some famous guy</h2>
+<h1>"All we're doing in computing is this stupid CODE.ORG thang :("</h1>
+<h2>- Gregory Boswell</h2>
 </center>
 </body>
 </html>
